[metadata]
name = vcsver
description = Automatic package version numbering from version control
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/janneronkko/vcsver
author = Janne Rönkkö
author_email = janne.ronkko@iki.fi
license = MIT
keywords = setuptools, development, git, version
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Archiving :: Packaging

[options]
packages = vcsver
python_requires = >=3.7
install_requires =
  tomli

[options.entry_points]
distutils.setup_keywords =
    vcsver = vcsver.setuptools_legacy:vcsver

setuptools.finalize_distribution_options =
    vcsver = vcsver.setuptools:finalize_distribution_options

[pycodestyle]
ignore =
    E501,
    W503,
